<resources>
    <string name="app_name">zbgl</string>
    <string name="home_zbgl">备品管理</string>
    <string name="home_mine">我的</string>
    <string name="home_sync">数据同步</string>
    <string name="home_device">装备信息</string>
    <string name="home_chart">聊天</string>
    <string name="home_contact">通讯录</string>
    <string name="home_discovery">发现</string>
    <string name="title_activity_wx">WXActivity</string>
    <string name="refresh">下拉刷新！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
